# MML-Minimal-Markup-Language

./: .gitignore  PROJET_COMPLETE.md  README.md  introduction.md  jest.config.js  package.json  pytest.ini
annexes/: annexe-a-balises-mml.md  annexe-b-exemple-complet.md  annexe-c-table-morse.md  annexe-d-schema-dom.md  annexe-e-parser-minimal.md  annexe-f-mapping-mmlc.md  annexe-g-comparatif.md
benchmarks/: README.md  benchmark.js  benchmark.py  generate_large.js  run_benchmarks.js
benchmarks/data/: medium.mml  small.mml
chapitres/: chapitre1-pourquoi-mml.md  chapitre10-cas-usage-mml.md  chapitre11-ecosysteme-futur.md  chapitre2-fondements-mml.md  chapitre3-syntaxe-mml.md  chapitre4-dom-mml.md  chapitre5-mmlc-compression.md  chapitre6-transmission-mml.md  chapitre7-mml-dnf.md  chapitre8-convertisseurs-mml.md  chapitre9-securite-authenticite.md
exemples/: exemple-urgence.md
implementations/: mml-parser.js  mml_parser.py
implementations/cpp/: Makefile  README.md  example.cpp  mml_parser.cpp  mml_parser.h
implementations/go/: README.md  example.go  (+2 more)
implementations/rust/: Cargo.toml  README.md
implementations/rust/src/: error.rs  example.rs  lib.rs  main.rs  parser.rs  types.rs
partnerships/: README.md
standards/: README.md
tests/: README.md  mml-parser.test.js  test_mml_parser.py
training/: README.md
tutorial/: README.md  index.html  lessons.js  test-debug.js  tutorial.css  tutorial.js
vscode-extension/: README.md  language-configuration.json  package.json
web-validator/: README.md  index.html  package.json  server.js  styles.css  validator.js
(+15 files in other folders)
